--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,6 @@
 {
 	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-	"assist": {
-		"actions": {
-			"source": {
-				"organizeImports": "on"
-			}
-		}
-	},
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"css": {
 		"linter": {
 			"enabled": true
