--- a/.github/workflows/shopify.yml
+++ b/.github/workflows/shopify.yml
@@ -11,6 +11,7 @@ on:
 
 env:
   SHOPIFY_CLI_NO_ANALYTICS: true
+  NODE_VERSION: '22'
 
 jobs:
   build:
@@ -23,9 +24,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version-file: "package.json"
-          cache: "npm"
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
       - run: npm ci
+      - name: Install date-picker deps
+        run: npm ci --no-audit --no-fund --prefix extensions/date-picker
       - run: npm install -g @shopify/cli@latest
       - run: npx shopify app build
         env:
@@ -43,15 +46,18 @@ jobs:
     permissions:
       contents: read
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           name: extensions
       - uses: actions/setup-node@v4
         with:
-          node-version-file: "package.json"
-          cache: "npm"
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
       - run: npm install -g @shopify/cli@latest
-      - run: npx shopify app deploy --force --message="${{ github.ref_name }}" --no-release --source-control-url="$COMMIT_URL" --version="deploy:${{ github.sha }}"
+      - name: Install date-picker deps
+        run: npm ci --no-audit --no-fund --prefix extensions/date-picker
+      - run: npx shopify app deploy --force --message="${{ github.ref_name }}" --no-release --source-control-url="$COMMIT_URL" --version="deploy_${{ github.sha }}"
         env:
           COMMIT_URL: ${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
@@ -64,14 +70,15 @@ jobs:
     permissions:
       contents: read
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           name: extensions
       - uses: actions/setup-node@v4
         with:
-          node-version-file: "package.json"
-          cache: "npm"
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
       - run: npm install -g @shopify/cli@latest
-      - run: npx shopify app release --force --version="release:${{ github.sha }}"
+      - run: npx shopify app release --force --version="release-${{ github.sha }}"
         env:
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
