--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@Webfluencer-B-V/WOOOD_app",
-	"version": "3.0.0",
+	"version": "3.0.3",
 	"private": true,
 	"type": "module",
 	"scripts": {
@@ -13,7 +13,7 @@
 		"clean": "rm -rf .{react-router,shopify,wrangler} build node_modules/.{cache,mf,tmp,vite,vite-temp} && find . -type d -name __screenshots__ -exec rm -rf {} \\;",
 		"deploy": "concurrently 'npm:deploy:*'",
 		"deploy:cloudflare": "wrangler deploy",
-		"deploy:shopify": "shopify app deploy --message=$(git rev-parse --abbrev-ref HEAD)-$npm_package_version --version=$(git rev-parse HEAD)",
+		"deploy:shopify": "shopify app build && shopify app deploy --force --message=$(git rev-parse --abbrev-ref HEAD)-$npm_package_version --version=$(git rev-parse HEAD)",
 		"dev": "shopify app dev --localhost-port=8080 --use-localhost",
 		"dev:tunnel": "source .env && shopify app dev --tunnel-url=${SHOPIFY_APP_URL}:${PORT:-8080}",
 		"gen": "concurrently 'npm:gen:*'",
