--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -17,6 +17,7 @@ jobs:
     name: Build
     if: ${{ !contains(github.event.head_commit.message, '[skip-ci]') }}
     runs-on: ubuntu-latest
+    environment: staging
     permissions:
       contents: read
     steps:
@@ -29,6 +30,7 @@ jobs:
       - run: npm run build --ignore-scripts
         env:
           SHOPIFY_API_KEY: ${{ vars.SHOPIFY_API_KEY }}
+          SHOPIFY_APP_URL: ${{ vars.SHOPIFY_APP_URL }}
 
       - run: npm test
       - uses: actions/upload-artifact@v4
@@ -41,6 +43,7 @@ jobs:
     if: ${{ github.ref_type == 'branch' }}
     needs: build
     runs-on: ubuntu-latest
+    environment: staging
     permissions:
       contents: read
     steps:
@@ -57,6 +60,7 @@ jobs:
     if: ${{ github.ref_type == 'tag' }}
     needs: build
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: read
     steps:
