--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches: [main]
     tags: [releases/*]
+  pull_request:
+    branches: [main]
 
 env:
   WRANGLER_SEND_METRICS: false
@@ -32,7 +34,14 @@ jobs:
           SHOPIFY_API_KEY: ${{ vars.SHOPIFY_API_KEY }}
           SHOPIFY_APP_URL: ${{ vars.SHOPIFY_APP_URL }}
 
-      - run: npm test
+      - name: Test
+        if: ${{ github.event_name == 'pull_request' }}
+        run: npm test
+        env:
+          SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
+          SHOPIFY_API_KEY: ${{ vars.SHOPIFY_API_KEY }}
+          SHOPIFY_APP_URL: ${{ vars.SHOPIFY_APP_URL }}
+
       - uses: actions/upload-artifact@v4
         with:
           name: build
