--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -13,6 +13,7 @@ on:
 
 env:
   WRANGLER_SEND_METRICS: false
+  NODE_VERSION: '22'
 
 jobs:
   build:
@@ -25,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version-file: "package.json"
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
       - run: npm ci
       - run: npm run build --ignore-scripts
@@ -49,6 +50,10 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
       - uses: actions/download-artifact@v4
         with:
           name: build
@@ -67,6 +72,10 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
       - uses: actions/download-artifact@v4
         with:
           name: build
