--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
+      - run: npm ci
       - uses: actions/download-artifact@v4
         with:
           name: build
@@ -76,6 +77,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
+      - run: npm ci
       - uses: actions/download-artifact@v4
         with:
           name: build
