--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -59,10 +59,10 @@ jobs:
         with:
           name: build
           path: build
-      - uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          command: versions upload --message=${{ github.ref_name }} --tag=${{ github.sha }}
+      - run: npx wrangler versions upload --message=${{ github.ref_name }} --tag=${{ github.sha }}
+        working-directory: build/server
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
   deploy:
     name: Deploy
@@ -82,7 +82,7 @@ jobs:
         with:
           name: build
           path: build
-      - uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          command: versions deploy
+      - run: npx wrangler versions deploy
+        working-directory: build/server
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
